--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -15,7 +15,7 @@
     {% for skill in skills.toolset %}
     <div class="item">
 
-      <b>{{ skill.name }</b>: {{ skill.skills }}
+      <h3 class="level-title">{{ skill.name }}</h3>
 
     </div>
 
