--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,7 +13,7 @@
   <div class="skillset">
 
     {% for skill in skills.toolset %}
-    <div class="item">
+    <div class="item" style="margin-bottom: 0;">
 
       <b>{{ skill.name }}</b>: {{ skill.skills }}
 
