--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -30,6 +30,9 @@
       {% if project.tagline %}
       - <span class="project-tagline">{{ project.tagline }}</span>
       {% endif %}
+      <div>
+        <b>Stack</b>: {{ project.stack }}
+      </div>
 
     </div><!--//item-->
   {% endfor %}
